--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_activity_exercise_set">История</string>
 
     <string name="title_activity_fullscreen">Упражнение</string>
+    <string name="title_activity_new_simple_ex">NewSimpleExActivity</string>
+    <string name="title_new_simple_excercise">Новое простое упражнение</string>
 </resources>
