--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_fullscreen">Упражнение</string>
     <string name="title_activity_new_simple_ex">NewSimpleExActivity</string>
     <string name="title_new_simple_excercise">Новое простое упражнение</string>
+    <string name="pref_file_name">application_prefs</string>
 </resources>
