Made "delete row" Made the correct calculation of "full success" after changing of step points .

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="pref_file_name">application_prefs</string>
     <string name="title_new_compound_template">Новое составное упражнение</string>
     <string name="title_new_limited_template">Новое упражениение с ограничением ударов</string>
+    <string name="missOptionName">Промах</string>
+    <string name="successOptionName">Выполнено полностью</string>
 </resources>
