All exercise layouts are descended from a single parent. Added handling onFinish event in RunToExerciseActivity The Undo function in RunToExercise is fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_new_limited_template">Новое упражениение с ограничением ударов</string>
     <string name="missOptionName">Промах</string>
     <string name="successOptionName">Выполнено полностью</string>
+    <string name="exerciseFinishedMessage">Finished</string>
 </resources>
