Add/remove summary step complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="successOptionName">Выполнено полностью</string>
     <string name="exerciseFinishedMessage">Finished</string>
     <string name="trend">тренд</string>
+    <string name="messageRestoreSummaryStep">Восстановить \"полный успех\"</string>
 </resources>
