The problem with the title is fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="txtButtonHistoryTitle">История</string>
     <string name="titleDeleteDialog">Удаление</string>
     <string name="txtDeleteResults">Подтвердите удаление результатов упражнения</string>
+    <string name="title_activity_about">О программе</string>
 </resources>
