--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="defaultTagDialogTitle">Тэги</string>
     <string name="title_dialog_tag_filter">Фильтр по тэгам</string>
     <string name="title_dialog_result_tags">Тэги результата</string>
+    <string name="txtSave">Сохранить</string>
+    <string name="txtAddDescription">Описание</string>
+    <string name="txtProgramName">Billiard training stats</string>
+    <string name="txtDobermann">Доберман</string>
+    <string name="txtBTSAbbr">BTS</string>
 </resources>
