--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,19 +12,17 @@
     <string name="exerciseFinishedMessage">Закончено</string>
     <string name="trend">тренд</string>
     <string name="messageRestoreSummaryStep">Восстановить \"полный успех\"</string>
-    <string name="msgNewSimpleUnlimExTitle">Простое без ограничений</string>
-    <string name="msgNewSimpleUnlimExComment">Попадание/промах без ограничения по числу ударов</string>
-    <string name="msgNewSimpleLimExTitle">Простое с ограничением</string>
-    <string name="msgNewSimpleLimExComment">Попадание/промах с ограничем по числу ударов. До первого промаха. Например, надо собрать позицию.</string>
+    <string name="msgNewSimpleUnlimExTitle">Простое</string>
+    <string name="msgNewSimpleExComment">Попадание/промах</string>
     <string name="msgNewCompoundExTitle">Составное упражнение</string>
     <string name="msgNewCompoundExComment">Удар может принести разное число очков.</string>
     <string name="msgNewExerciseActivityTitle">Новое упражнение</string>
     <string name="msgHistoryActivityTitle">История</string>
-    <string name="msgNewSerisExTitle">Бесконечная серия</string>
-    <string name="msgNewSerisExText">Бесконечная серия до первого промаха.</string>
+    <string name="msgNewSerisExTitle">Собрать позицию</string>
+    <string name="msgNewSerisExText">Играем до первого промаха</string>
     <string name="menuAbout">О программе...</string>
-    <string name="txtSuccessLimit">числа попаданий</string>
-    <string name="txtTotalShots">числа попыток</string>
+    <string name="txtSuccessLimit">попаданий</string>
+    <string name="txtTotalShots">ударов</string>
     <string name="txtLimitWord">Ограничение</string>
     <string name="no_data_text">Начните упражнение</string>
     <string name="txtAttempts">Всего ударов</string>
